--- a/client/src/pages/customer/customer.css
+++ b/client/src/pages/customer/customer.css
@@ -11,5 +11,28 @@
     margin: 16px;
 }
 
+.search-box{
+    display: flex;
 
+}
 
+.customer-list .card{
+    width: 100%;
+    margin: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.customer-list .card-body {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+/* Make table container fill available space */
+.customer-list .table-responsive {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
